# AI-Translator

./: .env  .gitignore  Agent.py  README.md  agent.py  chat.html  design_guidelines.md  graph.py  main.py  pyproject.toml  test_env.py
Interface/src/components/playground/: Playground.tsx  PlaygroundHeader.tsx  PlaygroundTile.tsx
Interface/src/hooks/: useConfig.tsx
Interface/src/pages/: index.tsx
Interface/src/styles/: globals.css
cPort Translator with LangGraph 1.13.2026/: agent.py  pyproject.toml
client/: index.html
client/src/: index.css
client/src/components/: AvatarPanel.tsx  ControlArea.tsx  ConventionModeControls.tsx  ConversationModeControls.tsx  ModeSelector.tsx  TextInputArea.tsx  TranscriptMessage.tsx  TranscriptPanel.tsx
client/src/components/examples/: AvatarPanel.tsx  ControlArea.tsx  ConventionModeControls.tsx  ConversationModeControls.tsx  ModeSelector.tsx  TextInputArea.tsx  TranscriptMessage.tsx  TranscriptPanel.tsx
client/src/pages/: home.tsx
js/: chat.js
shared/: schema.ts
